<resources>
    <string name="app_name">OurFood</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email">Email</string>
    <string name="entre_aqui">Já é registrado? Entre aqui!</string>
    <string name="entre_aqui2">Não está registrado ? Registre-se aqui!</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="loading">Carregando</string>
    <string name="final_frase">, O que vai comer agora?</string>
    <string name="n_fome">Não tenho fome</string>
</resources>