<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Registrar">

    <ImageView
        android:layout_width="900dp"
        android:layout_height="900dp"
        android:background="@drawable/ic_prato"
        android:alpha="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:elevation="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/registrar"
            android:textColor="@color/white"
            android:textSize="39sp"
            tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/edt_NomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/stroke_edit"
            android:drawableRight="@drawable/ic_name"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/nome_completo"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/stroke_edit"
            android:drawableRight="@drawable/ic_email"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/email"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/stroke_edit"
            android:drawableRight="@drawable/ic_user"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/usuario"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_edit"
            android:drawableRight="@drawable/ic_senha"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/senha"
            android:padding="18dp"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            tools:targetApi="jelly_bean" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stilobotao"
            android:text="@string/registrar"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtEntreaqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/entre_aqui"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>


