<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Login">

    <ImageView
        android:layout_width="900dp"
        android:layout_height="900dp"
        android:background="@drawable/ic_prato"
        android:alpha="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:elevation="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="39sp" />

        <EditText
            android:id="@+id/edt_Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:textColorHint="@color/white"
            android:padding="18dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:background="@drawable/stroke_edit"
            android:drawableRight="@drawable/ic_user"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edt_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:padding="18dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:background="@drawable/stroke_edit"
            android:drawableRight="@drawable/ic_senha"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressbar"
            android:background="@drawable/stilobotao"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/login"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_Login"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/entre_aqui2"
            android:textColor="@color/white"
            android:textSize="15dp"
            tools:targetApi="jelly_bean" />

    </LinearLayout>

</RelativeLayout>


